--- a/backend/backend.Application/backend.Application.csproj
+++ b/backend/backend.Application/backend.Application.csproj
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
-    <Folder Include="Mappings\" />
-    <Folder Include="UseCases\" />
+    <Folder Include="UseCases\User\Commands\CreateCommand\" />
+    <Folder Include="UseCases\User\Commands\DeleteCommand\" />
+    <Folder Include="UseCases\User\Commands\UpdateCommand\" />
+    <Folder Include="UseCases\User\Queries\GetByIdQuery\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,7 @@
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.1" />
     <PackageReference Include="WatchDog.NET" Version="1.4.12" />
   </ItemGroup>
