Add unit tests, http files and modify configuration files for pet, medic, client and appointment entities.

--- a/backend/backend.Application/backend.Application.csproj
+++ b/backend/backend.Application/backend.Application.csproj
@@ -24,6 +24,10 @@
 
   <ItemGroup>
     <Folder Include="Dtos\Vaccine\Response\" />
+    <Folder Include="UseCases\Appointment\Commands\DeleteCommand\" />
+    <Folder Include="UseCases\Appointment\Commands\UpdateCommand\" />
+    <Folder Include="UseCases\Appointment\Queries\GetAllQuery\" />
+    <Folder Include="UseCases\Appointment\Queries\GetByIdQuery\" />
     <Folder Include="UseCases\User\Queries\LoginQuery\" />
   </ItemGroup>
 
