--- a/backend/backend.Application/backend.Application.csproj
+++ b/backend/backend.Application/backend.Application.csproj
@@ -23,12 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\Vaccine\Response\" />
-    <Folder Include="UseCases\Appointment\Commands\DeleteCommand\" />
-    <Folder Include="UseCases\Appointment\Commands\UpdateCommand\" />
-    <Folder Include="UseCases\Appointment\Queries\GetAllQuery\" />
-    <Folder Include="UseCases\Appointment\Queries\GetByIdQuery\" />
     <Folder Include="UseCases\User\Queries\LoginQuery\" />
+    <Folder Include="UseCases\Vaccine\Commands\" />
   </ItemGroup>
 
 </Project>
