--- a/backend/docker-compose.override.yml
+++ b/backend/docker-compose.override.yml
@@ -1,12 +1,8 @@
 services:
   backend.api:
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_HTTP_PORTS=8080
-      - ASPNETCORE_HTTPS_PORTS=8081
+      - ASPNETCORE_ENVIRONMENT=Production
     ports:
       - "8080"
-      - "8081"
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+      - vetfriends_api_volume:/app/wwwroot
