--- a/backend/backend.Api/appsettings.Production.json
+++ b/backend/backend.Api/appsettings.Production.json
@@ -9,7 +9,7 @@
     "HealthChecks": [
       {
         "Name": "VetFriends API",
-        "Uri": "http://localhost:8080/health"
+        "Uri": "http://api-vetfriends-cc:8080/health"
       }
     ],
     "EvaluationTimeInSeconds": 5
