--- a/backend/backend.Api/appsettings.Production.json
+++ b/backend/backend.Api/appsettings.Production.json
@@ -6,12 +6,13 @@
     }
   },
   "HealthChecks-UI": {
-    "HealthChecks": [
-      {
-        "Name": "VetFriends API",
-        "Uri": "http://api-vetfriends-cc:8080/health"
-      }
-    ],
-    "EvaluationTimeInSeconds": 5
-  }
+  "HealthChecks": [
+    {
+      "Name": "VetFriends API",
+      "Uri": "http://localhost:8080/health"
+    }
+  ],
+  "EvaluationTimeInSeconds": 10,
+  "MinimumSecondsBetweenFailureNotifications": 60
+}
 }
