--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "framer-motion": "^12.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
