added cache to endpoitns, file saving service, jwt role and closed oracle connections.

--- a/backend/backend.Api/backend.Api.csproj
+++ b/backend/backend.Api/backend.Api.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\backend.Utilities\backend.Utilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
